book/ki-kompendium/css/style.css
/* ... */
.idz-header-wrapper.uk-active .idz-top-header .idz-logo .idz-logo-sticky {
    display: block;
}

/* [ 2.3 navigation ] */ 
nav#idz-nav {
    margin-top: 10px;
    margin-right: 40px;
}
nav#idz-nav.uk-navbar {
    background-color: transparent;
}
nav#idz-nav .uk-navbar-nav > li > a {
    color: #ffffff;
    font-size: 15px;
    font-family: "Roboto", Helvetica, Arial, sans-serif;
    font-weight: 300;
    padding: 0 20px;
}
.uk-navbar-toggle {
    color: #ffffff;
    position: absolute;
    right: -20px;
    bottom: 40px;
    font-size: 22px;
}
.uk-navbar-toggle:hover,
.uk-navbar-toggle:focus {
    color: #f3a612;
}
.idz-header-wrapper.uk-active .idz-top-header nav#idz-nav .uk-navbar-nav > li > a {
    color: #303030;
}
.idz-header-wrapper.uk-active .idz-top-header nav#idz-nav .uk-navbar-nav > li > a:hover,
.idz-header-wrapper.uk-active .idz-top-header nav#idz-nav .uk-navbar-nav > li > a:focus {
    color: #f3a612;
}
.idz-header-wrapper.uk-active .idz-top-header .uk-navbar-toggle {
    color: #303030;
    bottom: 25px;
}
nav#idz-nav .uk-navbar-nav > li > a:hover {
    background-color: transparent;
    color: #f3a612;
    opacity: .9;
}
nav#idz-nav .uk-navbar-nav > li.uk-active > a {
    background-color: transparent;
}
.idz-header-wrapper.uk-active .idz-top-header nav#idz-nav .uk-navbar-nav > li > a.idz-button-outline.white {
    border-color: rgba(0, 0, 0, 0.5);
}
.idz-header-wrapper.uk-active .idz-top-header nav#idz-nav .uk-navbar-nav > li > a.idz-button-outline.white:hover {
    opacity: .9;
}
.uk-nav-offcanvas > li > a.idz-button-outline.white {
    border-color: rgba(255, 255, 255, 0.1);
    padding: 8px 18px;
    width: 90%;
    margin-top: 10px;
    margin-left: 15px;
}
.idz-header-wrapper.uk-active .idz-top-header .uk-nav-offcanvas > li > a.idz-button-outline.white {
    background-color: transparent;
    border-color: rgba(255, 255, 255, 0.1);
}

/* [ 2.4. sign in popup ] */
#client-area .uk-modal-dialog{
    margin-top:120px
}
ul#client-area-tab.uk-tab {
    margin: -20px -22px 0 -25px;
    border-bottom: none
}
ul#client-area-tab.uk-tab-grid:before {
    border-top: none
}
ul#client-area-tab.uk-tab > li > a {
    font-size: 16px;
    padding: 16px 12px 14px;
    border: none;
    border-radius: 0
}
ul#client-area-tab.uk-tab > li:not(.uk-active) > a:hover {
    margin-bottom: 0
}
ul#client-area-tab.uk-tab > li.uk-width-1-2 {
    margin-right: -2px
}
#client-area .uk-modal-caption a {
    color: #fff
}
#signin-account,#create-account {
    padding: 22px 16px;
    font-size:14px;
}
#signin-account .uk-form-icon,#signin-account input[type="text"],#create-account .uk-form-icon,#create-account input[type="text"] {
    width: 100%
}
#signin-account.style2 input[type="text"], #create-account.style2 input[type="text"] {
    border-radius: 0px;
}
#signin-account .uk-form-icon > [class*='uk-icon-'],#create-account .uk-form-icon > [class*='uk-icon-'] {
    left: 8px;
    margin-top: -17px
}
#signin-account .uk-form-icon:not(.uk-form-icon-flip) > input,#create-account .uk-form-icon:not(.uk-form-icon-flip) > input {
    padding-left: 38px!important
}
#signin-account input[type="text"],#create-account input[type="text"] {
    height: 44px;
    font-size:14px;
    margin-bottom: 20px;
    padding: 4px 12px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px
}
#signin-account input[type="checkbox"],#create-account input[type="checkbox"] {
    width: 14px;
    height: 14px;
    margin: 0 2px 10px 0;
    position: relative;
    top: 3px
}
#signin-account .uk-button,#create-account .uk-button {
    margin: 18px 0 -15px
}

/* [ 2.5. header content ] */
.idz-header-content h1 {
    margin-bottom: 35px;
}
.idz-header-intro {
    margin-bottom: 40px;
}
.idz-float-img {
    position: absolute;
    right: auto;
    left: auto;
    top: 85px;
}

/* [ 2.6. Testimonials ] */
.uk-slidenav-position.idz-testi-slider {
    cursor: pointer;
}
.uk-slidenav-position.idz-testi-slider .uk-slidenav {
    top: 60%;
    margin-top: 0px;
    display: block;
}
.uk-slidenav-position.idz-testi-slider .uk-slidenav-previous {
    left: auto;
    right: 12%;
}
.uk-slidenav-position.idz-testi-slider .uk-slidenav-next {
    right: 8%;
}
.uk-slidenav-position.idz-testi-slider .uk-slidenav {
    width: 40px;
    height: 40px;
    line-height: 40px;
    color: rgba(50, 50, 50, 0.4);
    font-size: 40px;
}
.idz-testimonials {
}
.idz-testimonials h2 {
    font-weight: 300;
    margin-bottom: 30px;
}
.idz-testimonials blockquote {
    border-left: none;
    padding: 0;
    position: relative;
    padding-left: 45px;
    color: #959595;
}
.idz-testimonials blockquote:before {
    content: "\f10d";
    position: absolute;
    top: 5px;
    left: 0;
    font-family: FontAwesome;
    font-size: 28px;
    font-weight: 300;
    color: #c8c8c8;
}
.idz-testimonials blockquote p {
    font-size: 18px;
    line-height: 28px;
    color: #959595;
}
.idz-testi-people img {
    float: left;
    margin-right: 20px;
}
.idz-testi-people p {
    float: left;
}
.idz-icon-bg {
    font-size: 120px;
    color: #efefef;
    position: absolute;
    left: 0;
    top: -35px;
    z-index: -1;
}

/* [ 2.7. Subscription Form ] */
.idz-subscription-form {
    background-color: #f4f4f4;
    padding: 40px 60px;
    border-radius: 5px;
    background-image: url('../images/form-envelope.png');
    background-position: top center;
    background-repeat: no-repeat;
    position: relative;
}
.idz-subscription-form .form-stamp {
    position: absolute;
    left: 0;
    bottom: 0;
}
.idz-subscription-form input[type] {
    font-size: 14px;
    text-transform: lowercase;
    border-radius: 3px;
    color: #cccccc;
}
.idz-subscription-form p {
    color: #4b4b4b;
}
.idz-form {
    position: relative;
}
.idz-form .uk-button {
    position: absolute;
    right: 0;
    bottom: 0px;
    color: #ffffff;
    background-color: #f3a612;
    padding: 5px 15px;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}
/* ... */

